# HuntLab-smallRNA

./: .gitignore  404.html  Dockerfile  README.md  __main__.py  config.py  config.toml  create_noncoding.py  docker_env.yml  edger.py  environment.yml  example_config.yml  fastqc.py  genome_align.py  index.html  label_for_unitas.py  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  targetid.py  trim.py  unitas.py  unitas_summery.csv  versions.json
.github/workflows/: dev_docs.yaml  main.yml
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/cli-reference/: index.html
1.1.0/installation/: index.html
1.1.0/other-tasks/: index.html
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/cli-reference/: index.html
2.0.0/installation/: index.html
2.0.0/other-tasks/: index.html
2.0.0/walkthrough/: index.html
Dev/: 404.html  index.html  sitemap.xml
Dev/cli-reference/: index.html
Dev/installation/: index.html
Dev/other-tasks/: index.html
Dev/search/: search_index.json
Dev/walkthrough/: index.html
cli-reference/: index.html
cli-reference/build-coord-files/: index.html
cli-reference/extractnc/: index.html
cli-reference/label-for-unitas/: index.html
develop/: 404.html  index.html  sitemap.xml
docs/: Documentation.docx  index.md  installation.md  other-tasks.md
hlsmallrna/: __init__.py  __main__.py  config.py  create_noncoding.py  fastqc.py  genome_align.py  kegg_pathway_names.py  label_for_unitas.py  ss_overlap.py  targetid.py  trim.py  unitas.py  validate_config.py
installation/: index.html
other-tasks/: index.html
tests/: unittests.py
(+89 files in other folders)
